gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gin-mesh-gateway
  namespace: echo-grpc
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gin-mesh-vs
  namespace: echo-grpc
spec:
  hosts:
    - "*"
  gateways:
    - gin-mesh-gateway
  http:
    - match:
      route:
        - destination:
            port:
              number: 8000
            host: gin-mesh
