ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  rules:
    - host: httpbin.example.com
      http:
        paths:
          - path: /status/*
            backend:
              serviceName: gin-mesh
              servicePort: 8000
